style.css
body {
    height: 70%;
    margin: 1.5em;
    font-family: 'Archivo';
    font-size: .9em;
    background-color: #f2e9e0;
    overflow-x: hidden;
}
#metawrap {
    display: block;
}
nav {
    display: flex;
    position: absolute;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-end;
    top: 1.5em;
    z-index: 2;
    margin: 0;
    width: 90vw;
    padding-bottom: 0em;
    border-radius: 5px;
    background-color: #f2e9e0d8;
}
nav #name {
    display: flex;
    width: 100%;
    z-index: 3;
    justify-content: space-between;
    align-items: center;
}
nav #name a {
    display: flex;
    align-items: center;
    border-radius: 5px;
    height: 1.75em;
    color: black;
    text-decoration: none;
    font-family: 'Archivo';
    font-size: .9em;
    margin: 0;
    font-weight: normal;
}
nav #name a h1 {
    font-family: 'Archivo';
    font-size: 1.1em;
    margin: 0;
    font-weight: normal;
}
nav #name #hamburger {
    width: 1.5em;
    height: 1.5em;
    padding: .25em;
    margin: auto 0 auto 0;
    border-radius: 5px;
}
#hamburger:hover, #hamburger:active, nav #links a:hover, nav #links a:active, nav #name a:hover, nav #name a:active {
    cursor: pointer;
    background-color: #3f3c3915;
}
nav #links {
    display: flex;
    position: sticky;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-end;
    visibility: hidden;
    height: 0;
    transition-delay: .1s;
}
nav #links a {
    display: flex;
    justify-content: left;
    align-items: center;
    text-align: center;
    width: 8em;
    height: 1.7em;
    text-decoration: none;
    color: black;
}
#contact #links {
    display: none;
}
main {
    height: 80vh;
    width: 100%;
    display: grid;
    grid-template-rows: 1fr .3fr;
}
main #coverimage {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}
main #coverimage img {
    width: 200px;
}
#text-content {
    display: flex;
    height: 80%;
    width: 600px;
    flex-direction: column;
    justify-content: center;
}
#text-content p {
    width: 350px;
}
#text-content a {
    color: black;
}
#text-content span {
    display: none;
    font-family: 'Archivo';
    font-size: .9em;
    color: rgba(0, 0, 0, 0.75);
}
#contact {
    position: absolute;
    bottom: 1.5em;
}
@media screen and (min-width: 1000px) {
    body #metawrap div {
        width: 800px;
    }
}
@media screen and (min-width: 876px){
    #metawrap {
        display: flex;
        justify-content: center;
    }
    main {
        display: flex;
        margin-top: 6em;
        align-items:flex-start;
        justify-content: flex-end;
        flex-direction: row-reverse;
    }
    main #coverimage {
        height: 70%;
        justify-content: flex-end;
    }
    body #film-wrapper {
        justify-content: flex-start;
    }
    #coverimage {
        align-items: flex-end;
    }
    #hamburger {
        display: none;
    }
    nav #links {
        display: none;
        flex-direction: row;
        position: absolute;
        align-items: flex-start;
        justify-content: flex-end;
        visibility: visible;
        right: -4.5em;
    }
    nav #links a {
        display: block;
        text-align: center;
        width: 7em;
        text-decoration: none;
        color: black;
    }
    nav #links a:hover {
        background: none;
    }
    #contact {
        bottom: 2.5em;
    }
    #contact #links {
        display: flex;
        flex-direction: row;
        position: absolute;
        align-items: flex-start;
        justify-content: flex-end;
        visibility: visible;
        height: 2em;
        width: 20em;
    }
    #contact #links a {
        display: flex;
        justify-content: flex-start;
        align-items: flex-start;
        text-align: center;
        width: 7em;
        height: 1.7em;
        text-decoration: none;
        color: black;
    }
    body .project-wrapper {
        display: flex;
        flex-direction: row-reverse;
        align-items: center;
        justify-content: center;
        overflow: hidden;
    }
    .project-wrapper p {
        width: 50vw;
        padding: 2em;
    }
    body .project-wrapper #gallery-wrapper {
        margin: 2em;
    }
}
/* FILM */

#film-wrapper {
    margin-top: 3.5em;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}
#film-wrapper article {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    width: 350px;
    height: 210px;
    margin: 2em;

}
#film-wrapper article a {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 200px;

}
#film-wrapper article a img {
    height: 175px;
}
#film-wrapper article a #playcon {
    position: absolute;
    height: 2.5em;
    width: 2.5em;
}
/* FILM --> PROJECT */
#project-buttons {
    margin-left: 1em;
}
#project-buttons button {
    padding: 3px 7px 3px 7px;
    margin: auto 1.5em auto 0;
    border-radius: 5px;
    font-family: 'Archivo';
    font-size: .9em;
    background:none;
}
#project-buttons button:hover {
    color: #f2e9e0;
    background-color: black;
}
.project-wrapper {
    margin-top: 4em;
    width: 100%;
    border-radius: 5px;
    height: 86vh;
    overflow: scroll;
}
.project-wrapper span {
    display: block;
    height: 1em;
    margin: 1em;
}
.project-wrapper #gallery-wrapper {
    position: relative;
    width: 90%;
    max-width: 800px;
    margin: 0 auto;
}
.project-wrapper #gallery-wrapper #gallery {
    display: flex;
    overflow-x: scroll;
    scroll-snap-type: x mandatory;
    scroll-behavior: smooth;
    -webkit-overflow-scrolling: touch;
    -ms-overflow-style: none;
    scrollbar-width: none;
}
.project-wrapper #gallery-wrapper #gallery::-webkit-scrollbar {
    display: none;
  }
.project-wrapper #gallery-wrapper #gallery div {
    scroll-snap-align: center;
    width: 100%;
    flex-shrink: 0;
}
.project-wrapper #gallery-wrapper #gallery div img {
    width: 100%;
    height: auto;
}
.project-wrapper #gallery-wrapper #gallery-buttons {
    display: flex;
    height: 1em;
    justify-content: center;
    align-items: center;
}
.project-wrapper #gallery-wrapper #gallery-buttons img {
    padding: .25em;
}
#prev,
#next {
    background: none;
    border: none;
}
#prev svg, #next svg {
    width: 1.5em;
    height: 1.5em;
}
#prev {margin-right: .25em;}
#next {margin-left: .25em;}

#pjwrapper1 {
    display: none;
}
#pjwrapper2 {
    display: none;
}
#pjwrapper3 {
    display: none;
}
#pjwrapper4 {
    display: flex;
}

